src/css/embeds.less
@import "values";
@sidebar: ~"(max-width: 300px)";

h1 {
  font-size: 24px;
}

#nav-list {
  width: 100%;

  tr:nth-child(even) {
    background-color: #f1f1f1;
  }

  th,
  td {
    border-bottom: 1px solid #eee;
    padding: 5px;
    text-align: left;
  }

  textarea {
    height: 80px;
    width: 80%;
  }

  .state {
    width: 100px;
  }
}

// individual race embed
main.embed {
  a.see-full {
    .knockout-header();
    margin: 4px 0;
    text-decoration: none;
  }

  .results-header {
    span.state-label {
      display: inline-block !important;
    }
  }
}

// Balance of power embed

@thick-height: @height * 1.3;
@height: 20px;
@thin-height: @height * 0.7;

main.embed-bop {
  color: #444;
  // background: #333;

  .full-link {
    font-size: 12px;
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    .gotham();

    @media @sidebar {
      text-align: left;
      margin-top: 23px;
    }
  }
  .president .full-link {
    @media @sidebar {
      text-align: center;
    }
  }

  .inline {
    .container {
      display: flex;
      max-width: 100%;

      @media @desktop {
        padding: 0 5px;
      }

      @media @tablet {
        display: block;
      }
    }

    .bar-container {
      height: @height;
    }

    .net-gain-container {
      right: 25px;
      bottom: 8px;

      @media @tablet {
        right: 0;
      }
    }

    .house {
      .full-link {
        text-align: right;

        @media @tiny {
          text-align: left;
        }
      }
      .net-gain-container {
        left: 25px;
        right: auto;

        @media @tablet {
          left: 0;
        }

        @media @tiny {
          left: auto;
          right: 0;
        }
      }
    }

    .full-link {
      text-align: left;
      margin-top: 23px;
    }

    .second.divider {
      display: none;

      @media @tiny {
        display: block;
        margin-top: 15px;
      }
    }

    .president {
      .bar-container {
        display: block;
      }
      .full-link {
        margin-top: 23px;
        text-align: center;

        @media @tablet {
          margin-top: 10px;
        }
      }
    }

    .senate, .house {
      .number-container {
        display: flex;
      }
    }

    .link-container {
      flex: 1;
      padding: 0 25px;
      border-right: 1px solid #ddd;

      &.house {
        order: 1;
      }

      &.president {
        order: 2;
      }

      &.senate {
        order: 3;
      }

      h3 {
        margin: 10px 0;
      }

      .label {
        display: none;
      }

      .middle {
        height: @thin-height * 1.7;
      }

      @media @tablet {
        border: none;
        padding: 0;

        &.senate, &.house {
          width: 46%;
          display: inline-block;
        }
        &.senate {
          float: right;
        }

        &.president {
          .bar-container {
            height: @thin-height;
          }
          .middle {
            top: @thin-height / -5;
            height: @thin-height * 1.2;
          }
          h3 {
            margin-top: 0;
          }
        }

        // .label {
        //   margin-top: calc(@height + 5px);
        // }
      }

      @media @tiny {
        &.senate, &.house {
          width: 100%;
        }
      }

      &:last-child {
        border-right: 0;
      }
    }

    .candidate {
      border: 0 !important;
    }

    .source {
      margin-top: 10px;
      text-align: center;

      @media @tiny {
        margin-top: 20px;
        text-align: left;
        padding-left: 5px;
      }
    }
  }

  .dark {
    h3 {
      color: #eee;
    }
    .full-link a {
      color: #eee;

      &:hover {
        color: white;
        text-decoration: underline;
      }
    }
    .bar-container {
      .middle {
        border-left: 1px solid #eee;
      }
      .bar.gop {
        background: lighten(@gop,10%);
        path { fill: lighten(@gop,10%) }
      }
      // .gop .label {
      //   color: lighten(@gop,10%);
      // }
    }
    .chatter, .uncalled {
      color: #ccc;
    }
    .net-gain-container .gain-label {
      color: #ccc;
    }
    .source {
      color: #aaa;
    }
    .bar-container {
      background: #777;
    }
    .divider {
      border-top: 1px solid #777;
    }
    .president .candidate:first-child {
      border-right: 1px solid #777;
    }
    .candidate.gop {
      color: lighten(@gop,10%);
      path { fill: lighten(@gop,10%); }
    }
  }

  .dark.inline {
    .link-container {
      border-right: 1px solid #777;

      &:last-child {
        border-right: none;
      }

      @media @tablet {
        border: none;
      }
    }
  }

  .president {
    h3 {
      margin-top: 0;
    }
  }

  h3 {
    .gotham();
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 10px;
    text-align: center;
  }

  .chatter {
    text-align: center;
    font-size: 12px;
    .gotham();
    color: #666;
  }

  .winner-icon {
    color: #444;
    width: 0.8em;
    display: inline-block;
    margin-left: 0;
  }

  a.link-container {
    text-decoration: none;
    color: #444;
    position: relative;
    display: block;
  }

  .number-container {
    display: flex;
    justify-content: center;
    align-items: stretch;

    .candidate {
      flex: 1;
      text-align: center;
      max-width: 90px;
      color: #666;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;

      .name {
        .knockout-header();
        line-height: 1.2em;
        text-transform: uppercase;

        @media @sidebar {
          font-size: 12px;
        }
      }
      .votes {
        .gotham();
        font-size: 30px;
        font-weight: bold;
      }
    }

    .dem {
      color: @dem;
      path { fill: @dem; }
    }
    .gop {
      color: @gop;
      path { fill: @gop; }
    }
    .other {
      color: @ind;
      path { fill: @ind; }
    }
  }

  .president {
    .chatter {
      margin-top: 10px;
    }
    .bar-container {
      display: none;
    }
    .candidate:first-child {
      border-right: 1px solid #ddd;
    }
  }

  .bar-container {
    width: 100%;
    height: @thick-height;
    background: #ddd;
    margin: 5px 0 10px;
    position: relative;

    .bar {
      height: 100%;
      display: inline-block;

      &.dem {
        background: @dem;
        path { fill: @dem; }
      }
      &.gop {
        background: @gop;
        float: right;
        path { fill: @gop; }
      }
      &.other {
        background: @ind;
        path { fill: @ind; }
      }
    }

    // .label {
    //   display: none;
    //   position: absolute;
    //   top: -35px;
    //   // margin-bottom: calc(@height + 20px);
    //   .gotham();
    //   font-weight: bold;
    //   font-size: 12px;

    //   span.number {
    //     color: #9a9a9a;
    //     font-weight: normal;
    //     font-size: 0.9em;
    //     display: block;
    //   }
    // }

    // .dem .label {
    //   color: @dem;
    // }
    // .gop .label {
    //   color: @gop;
    //   right: 0;
    //   text-align: right;
    // }
    // .other .label {
    //   color: @ind;
    // }

    .middle {
      position: absolute;
      top: 0;
      border-left: 1px solid #444;
      height: @height * 1.5;
      width: 1px;
      right: 50%;
    }
  }

  .net-gain-container {
    text-align: center;
    position: absolute;
    bottom: 0;
    right: 0;

    .gain-label {
      font-size: 10px;
      color: #444;
      padding-bottom: 1px;
    }

    .net-gain {
      font-size: 11px;
      .gotham();
      font-weight: bold;
      background: #9a9a9a;
      color: white;
      display: inline-block;
      padding: 3px 6px;

      &.Dem {
        background: lighten(@dem,10%);
      }
      &.GOP {
        background: lighten(@gop,10%);
      }

      @media @sidebar {
        padding: 1px 4px 2px;
        font-size: 10px;
      }
    }
  }

  .divider {
    border-top: 1px solid #eee;
    margin: 20px 0 5px;
  }

  .source {
    margin-top: 55px;
  }
}

// homepage widget
main.embed-homepage {
  .disclaimer {
    .gotham();
    text-align: center;
    font-style: italic;
    font-size: 12px;
    color: #787878;
  }
}

